if ( NOT DEFINED ASHES_STATIC_RENDERER_PLUGINS )
	option( ASHES_STATIC_RENDERER_PLUGINS "Build renderers as static libraries" OFF )
endif ()

if ( ASHES_STATIC_RENDERER_PLUGINS )
	set( ASHES_STATIC_RENDERERS TRUE )
else ()
	set( ASHES_STATIC_RENDERERS FALSE )
endif ()

add_subdirectory( RendererCommon )

if ( ASHES_BUILD_OGL3 )
	add_subdirectory( Gl3Renderer )
endif ()
if ( ASHES_BUILD_OGL4 )
	add_subdirectory( Gl4Renderer )
endif ()
if ( ASHES_BUILD_VKN )
	add_subdirectory( VkRenderer )
endif ()
if ( ASHES_BUILD_D3D11 )
	add_subdirectory( D3D11Renderer )
endif ()
if ( ASHES_BUILD_TEST )
	add_subdirectory( TestRenderer )
endif ()
set( ENABLED_RENDERERS ${ENABLED_RENDERERS} PARENT_SCOPE )